Add further components to support generation of initial model